--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ typescript/playwright-report/
 typescript/blob-report/
 typescript/playwright/.cache/
 typescript/test-results/
+testeCadastro/tests/ui/node_modules
